[project]
name = "lightning-serve"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "aiofiles==23.2.1",
    "cohere>=5.17.0",
    "faiss-cpu>=1.12.0",
    "fastapi==0.104.1",
    "google-genai>=1.2.0",
    "httpx==0.25.0",
    "numpy>=2.3.2",
    "pillow>=11.3.0",
    "prometheus-client==0.19.0",
    "psutil==5.9.6",
    "pymupdf>=1.26.3",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "redis==5.0.1",
    "scikit-learn>=1.7.1",
    "streamlit>=1.48.1",
    "uvicorn[standard]==0.24.0",
]
